:tada: Adding micro-data (update)

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
     </section>
     <!-- Exemple pour le scss -->
-    <section id="parcours" class="parcours" itemprop="alumniOf" itemscope itemtype="https://schema.org/EducationalOrganization">
+    <section id="parcours" class="parcours" itemscope itemtype="https://schema.org/EducationalOrganization">
         <div class="parcours__intro">
             <h2 role="heading" aria-level="2" class="parcours__intro__title">
                 Mon parcours
@@ -378,7 +378,7 @@
         </div>
     </section>
     <footer role="contentinfo">
-        <section class="footer"  itemprop="contactPoint" itemscope itemtype="https://schema.org/contactPoint">
+        <section class="footer">
             <h2 role="heading" aria-level="2" class="footer__title">Sam Requena</h2>
             <ul role="list" class="footer__col1">
                 <li>
@@ -427,7 +427,7 @@
                     <a title="Visiter ma marque favorite" href="https://forever-vacation.com/">Ma marque favorite</a>
                 </li>
             </ul>
-            <ul role="list" class="footer__col5">
+            <ul role="list" class="footer__col5" itemscope itemtype="https://schema.org/contactPoint">
                 <li>
                     <a title="Envoyer un email à Sam" href="mailto:samrequena1510@gmail.com"><span itemprop="email">samrequena1510@gmail.com</span></a>
                 </li>
