Adding scss mobile first

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         height="1356"
                 >
             </div>
-            <span>Une façon de travailler qui plait au clients</span>
-            <a href="#" class="home__column1__link" title="Vers la section de mes avis clients">
+            <span class="special_hidden">Une façon de travailler qui plait au clients</span>
+            <a href="#" class="home__column1__link special_hidden" title="Vers la section de mes avis clients">
                 En apprendre d’avantages sur mes clients
             </a>
         </div>
@@ -70,7 +70,7 @@
                     contribuer
                     à des projets innovants et à évoluer dans le domaine du développement web.</span>
             </p>
-            <a href="#contact" class="cta home__column2__link" title="Vers le formulaire de contact">Contacter</a>
+            <a href="#contact" class="cta home__column2__link special_hidden" title="Vers le formulaire de contact">Contacter</a>
         </div>
     </section>
     <!-- Exemple pour le scss -->
@@ -82,67 +82,76 @@
             </h2>
             <img
                     class="parcours__intro__img"
-                    src="src/img/alerte_portfolio.webp"
+                    src="src/img/parcours_illustration.svg"
                     alt="Illustration d'un personnage qui marche"
                     title="Illustration d'un personnage qui marche"
-                    width="348"
-                    height="392"
+                    width="109"
+                    height="198"
             >
             <a href="#" class="parcours__intro__link" title="Vers la liste de mes compétences">
                 Mes compétences apprises
             </a>
         </div>
-        <article class="parcours__card">
-            <h3 role=heading aria-level="3" class="parcours__card__title">
-                Bachelier en techniques graphiques orientation&nbsp;-&nbsp;Web
-                <span class="parcours__card__sub_title" itemprop="name">Haute&nbsp;-&nbsp;Ecole de la Province de Liège</span>
-            </h3>
-            <p class="parcours__card__text">
-                Apprentissages du design web et de ses langages de codes, l&apos;utilisation de divers frameworks et
-                gestion de bases de données.
-            </p>
-        </article>
-        <article class="parcours__card">
-            <h3 role="heading" aria-level="3" class="parcours__card__title">Bachelier en Écriture Multimédia
-                <span class="parcours__card__sub_title">Haute&nbsp;-&nbsp;Ecole de la Province de Liège</span>
-            </h3>
-            <p class="parcours__card__text">
-                Apprentissages dans le domaine de l&apos;<abbr title="User Experience">UX</abbr> mais également dans la
-                prise de vues de photos et vidéos ainsi que leurs retouches et montages.
-            </p>
-        </article>
-        <article class="parcours__card">
-            <h3 role="heading" aria-level="3" class="parcours__card__title">
-                Formation secondaire&nbsp;-&nbsp;option sciences et mathématiques
-                <span class="parcours__card__sub_title"> Etablissement secondaire <abbr title="Saint">St</abbr>-Roch Theux</span>
-            </h3>
-            <p class="parcours__card__text">
-                Apprentissages approfondis des sciences en général ainsi qu&apos;une pratique des mathématiques
-                récurrentes qui m&apos;ont permis de travailler ma logique.
-            </p>
-        </article>
+        <div class="parcours__container">
+            <article class="parcours__container__card">
+                <h3 role=heading aria-level="3" class="parcours__container__card__title">
+                    Bachelier en techniques graphiques orientation&nbsp;-&nbsp;Web
+                    <span class="parcours__container__card__sub_title"
+                          itemprop="name">Haute&nbsp;-&nbsp;Ecole de la Province de Liège</span>
+                </h3>
+                <p class="parcours__container__card__text">
+                    Apprentissages du design web et de ses langages de codes, l&apos;utilisation de divers frameworks et
+                    gestion de bases de données.
+                </p>
+            </article>
+            <article class="parcours__container__card">
+                <h3 role="heading" aria-level="3" class="parcours__container__card__title">Bachelier en Écriture
+                    Multimédia
+                    <span class="parcours__container__card__sub_title">Haute&nbsp;-&nbsp;Ecole de la Province de Liège</span>
+                </h3>
+                <p class="parcours__container__card__text">
+                    Apprentissages dans le domaine de l&apos;<abbr title="User Experience">UX</abbr> mais également dans
+                    la
+                    prise de vues de photos et vidéos ainsi que leurs retouches et montages.
+                </p>
+            </article>
+            <article class="parcours__container__card">
+                <h3 role="heading" aria-level="3" class="parcours__container__card__title">
+                    Formation secondaire&nbsp;-&nbsp;option sciences et mathématiques
+                    <span class="parcours__container__card__sub_title"> Etablissement secondaire <abbr
+                            title="Saint">St</abbr>-Roch Theux</span>
+                </h3>
+                <p class="parcours__container__card__text">
+                    Apprentissages approfondis des sciences en général ainsi qu&apos;une pratique des mathématiques
+                    récurrentes qui m&apos;ont permis de travailler ma logique.
+                </p>
+            </article>
+        </div>
     </section>
     <section id="portfolio" class="portfolio">
-        <div>
-            <h2 role="heading" aria-level="2" class="portfolio__title">
-                Mon portfolio
-                <span class="sub_title">Découvrez tous mes projets</span>
-            </h2>
-            <p class="portfolio__text">
-                Découvrez l&apos;étendue de mon parcours professionnel à travers la section dédiée à
-                'Mon Portfolio'. Cette galerie exhaustive offre un aperçu détaillé de mes compétences, réalisations et
-                projets marquants, reflétant ainsi mon engagement
-            </p>
-            <a href="#" class="cta portfolio__link" title="Let's go !!">On y va !</a>
+        <div class="portfolio__container">
+            <div class="portfolio__container__right">
+                <h2 role="heading" aria-level="2" class="portfolio__container__right__title">
+                    Mon portfolio
+                    <span class="sub_title">Découvrez tous mes projets</span>
+                </h2>
+                <p class="portfolio__container__right__text">
+                    Découvrez l&apos;étendue de mon parcours professionnel à travers la section dédiée à
+                    'Mon Portfolio'. Cette galerie exhaustive offre un aperçu détaillé de mes compétences, réalisations
+                    et
+                    projets marquants, reflétant ainsi mon engagement
+                </p>
+                <a href="#" class="cta portfolio__container__right__link" title="Let's go !!">On y va !</a>
+            </div>
+            <img
+                    class="portfolio__img"
+                    src="src/img/portfolio_screen.jpg"
+                    alt="Capture d'écran de mon portfolio"
+                    title="Capture d'écran de mon portfolio"
+                    width="1600"
+                    height="1600"
+            >
         </div>
-        <img
-                class="portfolio__img"
-                src="src/img/portfolio_screen.jpg"
-                alt="Capture d'écran de mon portfolio"
-                title="Capture d'écran de mon portfolio"
-                width="1600"
-                height="1600"
-        >
     </section>
     <section id="about">
         <h2 role="heading" aria-level="2" class="about__title">
@@ -150,7 +159,8 @@
             <span class="sub_title">La qualité de mon travail</span>
         </h2>
         <p class="about__text">
-            Retrouvez la citation qui dicte ma façon de travailler ainsi que d’un retour client et de statistique lié son projet.
+            Retrouvez la citation qui dicte ma façon de travailler ainsi que d’un retour client et de statistique lié
+            son projet.
         </p>
         <div class="about__content">
             <div class="about__content__citation">
@@ -213,7 +223,8 @@
                 <p class="skills__column2__article__text">
                     Connaissances en HTML, SASS, JavaScript, SQL et PHP, je maîtrise les langages clés du développement
                     web, permettant la création efficace de pages structurées, de style optimisé, du développement
-                    front-end interactif, de la gestion de bases de données, et de la création d'applications web dynamiques.
+                    front-end interactif, de la gestion de bases de données, et de la création d'applications web
+                    dynamiques.
                 </p>
             </article>
             <article class="skills__column2__article">
@@ -221,8 +232,10 @@
                     Conception web
                 </h3>
                 <p class="skills__column2__article__text">
-                    Je maitrise le concepts fondamentaux du design web comme l’ergonomie, la couleurs, la typographie et la mise en page,
-                    je me considère comme un bon créatif maîtrisant les outils tels que Photoshop, Illustrator ou encore Figma;
+                    Je maitrise le concepts fondamentaux du design web comme l’ergonomie, la couleurs, la typographie et
+                    la mise en page,
+                    je me considère comme un bon créatif maîtrisant les outils tels que Photoshop, Illustrator ou encore
+                    Figma;
                 </p>
             </article>
             <article class="skills__column2__article">
@@ -324,7 +337,8 @@
                     <span class="sub_title">Formulaire</span>
                 </h2>
                 <p class="text">
-                    Si vous souhaitez me poser une question ou me contacter afin qu’on puisse travailler sur un de vos projets, n’hésitez pas à me contacter via ce formulaire.
+                    Si vous souhaitez me poser une question ou me contacter afin qu’on puisse travailler sur un de vos
+                    projets, n’hésitez pas à me contacter via ce formulaire.
                 </p>
                 <img
                         src="src/img/contact_illustration.webp"
@@ -340,15 +354,18 @@
                     <fieldset>
                         <div class="contact__form__firstname">
                             <label for="firstname">Prénom</label>
-                            <input type="text" name="firstname" id="firstname" placeholder="Prénom" autocomplete="name" required>
+                            <input type="text" name="firstname" id="firstname" placeholder="Prénom" autocomplete="name"
+                                   required>
                         </div>
                         <div class="contact__form__name">
                             <label for="name">Nom</label>
-                            <input type="text" name="name" id="name" placeholder="Nom" autocomplete="family-name" required>
+                            <input type="text" name="name" id="name" placeholder="Nom" autocomplete="family-name"
+                                   required>
                         </div>
                         <div class="contact__form__email">
                             <label for="email">Email</label>
-                            <input type="text" name="email" id="email" placeholder="Email" autocomplete="email" required>
+                            <input type="text" name="email" id="email" placeholder="Email" autocomplete="email"
+                                   required>
                         </div>
                         <div class="contact__form__phoneNumber">
                             <label for="number">Numéro</label>
@@ -367,7 +384,8 @@
                         </div>
                         <div class="contact__form__message">
                             <label for="message">Que voulez-vous me communiquer&nbsp;?</label>
-                            <textarea name="message" id="message" cols="40" rows="3" placeholder="Inscrivez votre message"></textarea>
+                            <textarea name="message" id="message" cols="40" rows="3"
+                                      placeholder="Inscrivez votre message"></textarea>
                         </div>
                         <button type="submit">Envoyer</button>
                     </fieldset>
@@ -418,7 +436,8 @@
             </ul>
             <ul role="list" class="footer__col4">
                 <li>
-                    <a title="Visiter le site d'achat de mon ordinateur" href="https://www.apple.com/be-fr/shop/buy-mac/macbook-pro">Mon ordinateur</a>
+                    <a title="Visiter le site d'achat de mon ordinateur"
+                       href="https://www.apple.com/be-fr/shop/buy-mac/macbook-pro">Mon ordinateur</a>
                 </li>
                 <li>
                     <a title="Visiter mon club favoris" href="https://fr.mancity.com/">Mon club favoris</a>
@@ -432,7 +451,8 @@
                     <a title="Envoyer un email à Sam" href="mailto:samrequena1510@gmail.com"><span itemprop="email">samrequena1510@gmail.com</span></a>
                 </li>
                 <li>
-                    <a title="Téléphoner à Sam" href="tel:+32472860218"><span itemprop="telephone">+ 32 (0)472 86 02 18</span></a>
+                    <a title="Téléphoner à Sam" href="tel:+32472860218"><span
+                            itemprop="telephone">+ 32 (0)472 86 02 18</span></a>
                 </li>
             </ul>
             <hr><!--Barre de séparation-->
@@ -461,12 +481,15 @@
             </ul>
             <div class="footer__copyright">
                 <p class="footer__copyright__text">
-                    Tous droits réservés. Aucune reproduction, distribution ou transmission du contenu de ce site n'est autorisée sans permission écrite préalable.
-                    Les informations présentes ici sont confidentielles et sont destinées exclusivement à un usage personnel et professionnel.
+                    Tous droits réservés. Aucune reproduction, distribution ou transmission du contenu de ce site n'est
+                    autorisée sans permission écrite préalable.
+                    Les informations présentes ici sont confidentielles et sont destinées exclusivement à un usage
+                    personnel et professionnel.
                 </p>
                 <p class="footer__copyright__text">
                     Nous nous engageons à préserver la confidentialité de vos informations personnelles, telles que
-                    votre nom et votre adresse e-mail. Aucune de ces données ne sera partagée avec des tiers sans votre consentement explicite.
+                    votre nom et votre adresse e-mail. Aucune de ces données ne sera partagée avec des tiers sans votre
+                    consentement explicite.
                 </p>
                 <p class="footer__copyright__text">
                     Ce site peut contenir des liens vers d'autres sites web, mais nous déclinons toute responsabilité
